--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,14 @@
 {
-  "name": "job_portal",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "The job Portal Backend",
+  "description": "",
   "main": "server.js",
+  "dependencies": {},
+  "devDependencies": {},
   "scripts": {
-    "server": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "is-empty": "^1.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.11",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.4.17",
-    "nodemailer-smtp-transport": "^2.7.4",
-    "validator": "^13.5.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+  "license": "ISC"
 }
